Added more info

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
     />
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
     <title>My Portfolio</title>
   </head>
   <body>
